atualizacao de scrips metaencad ver dessem

--- a/Nuvem/config
+++ b/Nuvem/config
@@ -15,10 +15,10 @@ B2;AZCPSPLDV03;1
 B3;AZCPSPLDV04;1
 B4;AZCPSPLDV05;1
 B5;AZCPSPLDV06;1
-B6;AZCPSPLDV07;1
-B6;AZCPSPLDV07;1
-B6;AZCPSPLDV07;1
-B6;AZCPSPLDV07;1
+#B6;AZCPSPLDV07;1
+#B6;AZCPSPLDV07;1
+#B6;AZCPSPLDV07;1
+#B6;AZCPSPLDV07;1
 #l0;local;4
 C0;AZCPSPLDV02;1
 D1;AZCPSPLDDESSEMV7A;1
